data/all_generated_tests/raw_wast_tests/call_indirect_InfiniteLoops_4192.wast
;; 1. **Test Description**: Create a WebAssembly module that includes a `loop` statement inside a function coupled with a `call_indirect` instruction. Verify whether the loop correctly terminates by breaking out with a `br_if` using a condition dependent on the call’s return value. The `call_indirect` should use a valid `tableidx` and `typeidx`. The test validates if incorrect condition evaluation leads to infinite loops.

(assert_invalid
  (module
    (type (func (result i32)))
    (func $invalid-call-indirect-loop
      (block $exit
        (loop $loop
          (br_if $exit
            (call_indirect (type 0) (i32.const 0))
          )
        )
      )
    )
    (table 1 funcref)
    (elem (i32.const 0) $invalid-call-indirect-loop)
  )
  "type mismatch"
)